--- a/Express/package.json
+++ b/Express/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "method-override": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "type": "module"
 }
